<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="24dp"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="center"
                  android:orientation="vertical">

        <TextView
            android:text="@string/Altitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/m_Altitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"/>

        <TextView
            android:text="@string/Pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/m_TextPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"/>

        <TextView
            android:text="@string/Temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/m_Temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"/>

        <TextView
            android:text="@string/Measurement_Rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/m_MeasurementRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"/>

        <TextView
            android:text="@string/Floor_Num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/m_FloorNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"/>

        <TextView
            android:text="@string/Altimeter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/m_HgPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"/>

        <TextView
            android:id="@+id/m_elevationRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"/>

        <TextView
            android:text="@string/elevation_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/m_pressureRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"/>

        <TextView
            android:text="@string/pressure_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>




